CS3103: Bug Fixes After Bugbash 3
